# cathedral

./: .gitignore  README.md  build.sh  cathedral.py  config.md  development_log.md  go.mod  go.sum  install.sh  open-old.md
scratchpad/: AGENTS.md  README.md  cathedral.json  notes.md  pyproject.toml
scratchpad/assets/: hnt-params.json
scratchpad/consolidation-testing/: .gitignore
scratchpad/consolidation-testing/0215/: check_wiki.py  consolidate.py  fix_links.py  wiki-spec.md
scratchpad/consolidation-testing/0215/prompts/: claude-system.md  codex-agents.md  consolidation-prompt.md
scratchpad/consolidation-testing/0215/wiki-run1/: agi-by-2027.md  ai-lab-security.md  algorithmic-efficiency.md  data-wall.md  unhobbling.md  (+1 more)
scratchpad/consolidation-testing/0215/wiki-run1-sonnet/: Index.md  ai-revenue-growth.md  automated-ai-research.md  compute-scaling.md  counting-the-ooms.md  industrial-mobilization.md  intelligence-explosion.md  power-requirements.md  superintelligence.md
scratchpad/cot-testing/: 1769318740.md  1769318821-0.md
scratchpad/example-store/: index.md
scratchpad/prompts/consolidation/: default.md
scratchpad/prompts/runtime/: default.md
scratchpad/spec/: overview.md  runtime.md  web.md
scratchpad/src/cathedral_v2/: __init__.py  cli.py  config.py  hnt.py  memory.py  runtime.py  tokens.py  webapp.py
scratchpad/src/cathedral_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scratchpad/test-store/: index.md
scratchpad/test-store/semantic/: session-20260106-191731.md
scratchpad/web/: app.js  index.html  styles.css
(+296 files in other folders)
